mention how to migrate from micro CLI to bosh-init

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -28,12 +28,6 @@ title: Index
  * BOSH micro deploy step-by-step
  * [Installing BOSH CLI](bosh-cli.html)
 
-### Advanced BOSH configuration
-
- * [User management on the Director](director-users.html)
- * [Configuring the Director to use External Database](connect-postgres-hadb.html)
- * Configuring the Director to use External Blobstore
-
 ### Installing BOSH with bosh-init **[beta]**
 
  * [Bootstrapping an environment](init.html)
@@ -45,6 +39,13 @@ title: Index
  * bosh-init deploy step-by-step
  * [Install bosh-init](install-bosh-init.html)
  * [Using bosh-init](using-bosh-init.html)
+    * [Migrating to bosh-init from the micro CLI plugin](migrate-to-bosh-init.html)
+
+### Advanced configuration
+
+ * [User management on the Director](director-users.html)
+ * [Configuring the Director to use External Database](connect-postgres-hadb.html)
+ * Configuring the Director to use External Blobstore
 
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
