--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -320,6 +320,8 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 ---
 ## <a id="deploy"></a> Step 3: Deploy
 
+<p class="note">Note: See <a href="migrate-to-bosh-init.html">Migrating to bosh-init from the micro CLI plugin</a> if you have an existing MicroBOSH.</p>
+
 1. Install [bosh-init](./install-bosh-init.html).
 
 1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
