--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -160,6 +160,8 @@ To prepare your vSphere environment, use the vSphere Web Client to find out and/
 ---
 ## <a id="deploy"></a> Step 3: Deploy
 
+<p class="note">Note: See <a href="migrate-to-bosh-init.html">Migrating to bosh-init from the micro CLI plugin</a> if you have an existing MicroBOSH.</p>
+
 1. Install [bosh-init](./install-bosh-init.html).
 
 1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
