--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -38,6 +38,10 @@ resource_pools:
     cpu: 2
     ram: 4_096
     disk: 20_000
+  env:
+    bosh:
+      # c1oudc0w is a default password for vcap user
+      password: "$6$4gDD3aV0rdqlrKC$2axHCxGKIObs6tAmMTqYCspcdvQXh3JJcvWOY2WGb4SrdXtnCyNaWlrf3WEqvYR2MYizEGp3kMmbpwBC6jsHt0"
 
 disk_pools:
 - name: disks
