prefer using bosh-init in index.html

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -15,21 +15,9 @@ title: Index
 ---
 ## <a id="install"></a> Installing BOSH
 
- * [BOSH components](bosh-components.html)
- * [Bootstrapping an environment](bootstrap.html)
-    * [On AWS](deploy-microbosh-to-aws.html)
-       * CloudFormation template
-    * [On OpenStack](deploy-microbosh-to-openstack.html)
-       * Heat template
-    * [On vSphere](deploy-microbosh-to-vsphere.html)
-       * Compatibility
-    * On vCloud
-    * [On Local machine using BOSH Lite](bosh-lite.html)
- * BOSH micro deploy step-by-step
- * [Installing BOSH CLI](bosh-cli.html)
-
 ### Installing BOSH with bosh-init **[beta]**
 
+ * [BOSH components](bosh-components.html)
  * [Bootstrapping an environment](init.html)
     * [On AWS](init-aws.html)
     * [On OpenStack](init-openstack.html)
@@ -40,6 +28,20 @@ title: Index
  * [Install bosh-init](install-bosh-init.html)
  * [Using bosh-init](using-bosh-init.html)
     * [Migrating to bosh-init from the micro CLI plugin](migrate-to-bosh-init.html)
+ * [Installing BOSH CLI](bosh-cli.html)
+
+### Installing BOSH with the micro CLI plugin
+
+ * [Bootstrapping an environment](bootstrap.html)
+    * [On AWS](deploy-microbosh-to-aws.html)
+       * CloudFormation template
+    * [On OpenStack](deploy-microbosh-to-openstack.html)
+       * Heat template
+    * [On vSphere](deploy-microbosh-to-vsphere.html)
+       * Compatibility
+    * On vCloud
+    * [On Local machine using BOSH Lite](bosh-lite.html)
+ * BOSH micro deploy step-by-step
 
 ### Advanced configuration
 
