--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -100,4 +100,4 @@ This example shows how BOSH components interact when creating a new VM.
 1. The Agent uses the IP addresses and IDs to configure the VM.
 
 ---
-Next: [Bootstrapping an environment / What is MicroBOSH?](bootstrap.html)
+Next: [Bootstrapping an environment](init.html)
