--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -134,7 +134,7 @@ cloud_provider:
   mbus: "https://mbus:mbus-password@10.0.0.6:6868"
 
   properties:
-    vsphere: *vsphere
+    vcenter: *vcenter
     agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
