add default max_threads for init manifests

--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -117,6 +117,7 @@ jobs:
       name: my-bosh
       db: *db
       cpi_job: cpi
+      max_threads: 10
 
     hm:
       http: {user: hm, password: hm-password}
