--- a/init-vcloud.html.md.erb
+++ b/init-vcloud.html.md.erb
@@ -105,6 +105,7 @@ jobs:
       name: my-bosh
       db: *db
       cpi_job: cpi
+      max_threads: 4
 
     hm:
       http: {user: hm, password: hm-password}
