--- a/job-logs.html.md.erb
+++ b/job-logs.html.md.erb
@@ -73,7 +73,7 @@ To save output from a BOSH errand VM:
     By default, BOSH downloads the logs to your present working directory. Use the `--logs-dir destination_directory` option to change this directory.
 
 <pre class="terminal">
-$ run errand smoke-tests --download-logs --logs-dir ~/workspace/smoke-tests-logs
+$ bosh run errand smoke-tests --download-logs --logs-dir ~/workspace/smoke-tests-logs
 </pre>
 
 ---
