--- a/snapshots.html.md.erb
+++ b/snapshots.html.md.erb
@@ -33,25 +33,25 @@ Once you enable snapshots in your deployment, you can use following CLI commands
 <p class="note"><strong>Note</strong>: When you manually take a snapshot, the Director does not pause any processes or flush buffered data to disk. Depending on your IaaS, a snapshot taken manually might not fully capture all the data on your VM at the point you take the snapshot.</p>
 
 <pre class="terminal">
-bosh snapshots
+$ bosh snapshots
 </pre>
 
 Displays the job, Content ID (CID), and created date of all snapshots. Run <code>bosh snapshots</code> to display a list of CIDs if you need to find specific snapshots to recover.
 
 <pre class="terminal">
-bosh take snapshot [JOB] [INDEX]
+$ bosh take snapshot [JOB] [INDEX]
 </pre>
 
 Takes a snapshot of the job VM that you specify. If you do not specify a <code>JOB</code>, takes a snapshot of every VM in the current deployment.
 
 <pre class="terminal">
-bosh delete snapshot SNAPSHOT-CID
+$ bosh delete snapshot SNAPSHOT-CID
 </pre>
 
 Deletes the snapshot that SNAPSHOT-CID specifies.
 
 <pre class="terminal">
-bosh delete snapshots
+$ bosh delete snapshots
 </pre>
 
 Deletes all snapshots.
@@ -75,8 +75,8 @@ To schedule snapshots for all VMs in all deployments:
   	```yaml
     properties:
       director:
-    		enable_snapshots: true
-    		snapshot_schedule: 0 0 7 * * * UTC
+        enable_snapshots: true
+        snapshot_schedule: 0 0 7 * * * UTC
     ```
 
 1. Run `bosh deploy` to update your deployment.
