remove bosh logs --all since it was deprecated

--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -125,7 +125,7 @@ When you provide arguments without an option flag, the Director executes the arg
 ---
 ### <a id="logs"></a> Logs
 
-<pre class="terminal">bosh logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--all] [--dir DESTINATION_DIRECTORY]</pre>
+<pre class="terminal">bosh logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--dir DESTINATION_DIRECTORY]</pre>
 Fetches a job or agent log from a VM. Supports custom filtering only for job logs.
 
 ---
