fix typo in bosh-components.html

--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -61,7 +61,7 @@ The Director uses a Postgres database to store information about the desired sta
 
 ### <a id="blobstore"></a>Blobstore
 
-The BOSH Blobstore stores the source forms of releases and the compiled z of BOSH releases. An operator uploads a release using the BOSH CLI, and the Director inserts the release into the Blobstore. When you deploy a release, BOSH orchestrates the compilation of packages and stores the result in the Blobstore.
+The BOSH Blobstore stores the source forms of releases and the compiled images of BOSH releases. An operator uploads a release using the BOSH CLI, and the Director inserts the release into the Blobstore. When you deploy a release, BOSH orchestrates the compilation of packages and stores the result in the Blobstore.
 
 ---
 ## <a id="agent"></a>Agent
