add vsphere cpi notes

--- a/vcloud-cpi.html.md.erb
+++ b/vcloud-cpi.html.md.erb
@@ -27,7 +27,7 @@ networks:
 vCloud CPI does not support dynamic or vip networks.
 
 ---
-## <a id='resource-pools'></a> Resource pools
+## <a id='resource-pools'></a> Resource Pools
 
 Schema for `cloud_properties` section:
 
