--- a/aws-cpi.html.md.erb
+++ b/aws-cpi.html.md.erb
@@ -43,7 +43,7 @@ networks:
 ```
 
 ---
-## <a id='resource-pools'></a> Resource pools
+## <a id='resource-pools'></a> Resource Pools
 
 Schema for `cloud_properties` section:
 
