--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -45,7 +45,7 @@ networks:
 ```
 
 ---
-## <a id='resource-pools'></a> Resource pools
+## <a id='resource-pools'></a> Resource Pools
 
 Schema for `cloud_properties` section:
 
