clarify access to the created s3 bucket

--- a/s3-release-blobstore.html.md.erb
+++ b/s3-release-blobstore.html.md.erb
@@ -6,7 +6,7 @@ This topic is written for release maintainers and describes how to set up a S3 b
 
 ## <a id="bucket"></a> Creating S3 Bucket
 
-S3 bucket is used for storing release blobs and generated final release blobs.
+S3 bucket is used for storing release blobs and generated final release blobs. It's configured to be readable by everyone.
 
 - Create S3 bucket with a descriptive name. For example choose `redis-blobs` for `redis-release` release.
 
