--- a/vsphere-cpi.html.md.erb
+++ b/vsphere-cpi.html.md.erb
@@ -33,7 +33,8 @@ Schema for `cloud_properties` section:
 
 * **cpu** [Integer, required]: Number of CPUs. Example: `1`.
 * **ram** [Integer, required]: RAM in megabytes. Example: `1024`.
-* **disk** [Integer, required]: Ephemeral disk size in megabytes. Example: `10240`
+* **disk** [Integer, required]: Ephemeral disk size in megabytes. Example: `10240`.
+* **nested_hardware_virtualization** [Boolean, optional]: Exposes hardware assisted virtualization to the VM. Default: `false`.
 
 * **datacenters** [Array, optional]: Array of datacenters to use for VM placement. Must have only one and it must match datacenter configured in global CPI options.
     * **name** [String, required]: Datacenter name.
@@ -43,7 +44,7 @@ Schema for `cloud_properties` section:
                 * **name** [String, required]: Name of a DRS rule that the Director will create.
                 * **type** [String, required]: Type of a DRS rule. Currently only `separate_vms` is supported.
 
-Example of a VM with 1 CPU, 1GB RAM, and 10GB ephemeral disk:
+Example of a VM with 1 CPU, 1GB RAM, and 10GB ephemeral disk asked to be placed into a specific cluster:
 
 ```yaml
 resource_pools:
@@ -56,9 +57,12 @@ resource_pools:
     cpu: 2
     ram: 1_024
     disk: 10_240
+
+    datacenters:
+    - {name: my-dc, clusters: [my-vsphere-cluster]}
 ```
 
-Example of a VM asked to be placed on a specific cluster:
+And an example of a VM asked to be placed into a specific cluster in a specified vSphere resource pool:
 
 ```yaml
 resource_pools:
@@ -75,7 +79,7 @@ resource_pools:
     datacenters:
     - name: my-dc
       clusters:
-      - my-vsphere-cluster
+      - my-vsphere-cluster: {resource_pool: my-vsphere-res-pool}
 ```
 
 ---
