--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -94,7 +94,7 @@ title: Index
  * Debugging issues with jobs
 
 ---
-## Using BOSH to package and distribute software
+## <a id="release"></a> Using BOSH to package and distribute software
 
  * What is a release?
     * [Creating a release](create-release.html)
@@ -114,9 +114,10 @@ title: Index
        * [Configuring S3 release blobstore](s3-release-blobstore.html)
 
 ---
-## Extending BOSH to support other IaaSs
+## <a id="extend"></a> Extending BOSH to support other IaaSs
 
  * What is a CPI?
- * Interactions between CPIs and BOSH Agent
- * Stemcell building
- * CPI API v1
+ * [Building a CPI](build-cpi.html)
+    * [CPI API v1](cpi-api-v1.html)
+    * Interactions between CPIs and BOSH Agent
+ * Building a stemcell
