--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -64,13 +64,14 @@ title: Index
  * [CLI Commands](sysadmin-commands.html)
  * [Director tasks](director-tasks.html)
 
-### Detailed Deployment Configuration
+### <a id="deployment-config"></a> Detailed Deployment Configuration
 
  * Deployment Jobs
  * Resource Pools
     * [VM anti-affinity](vm-anti-affinity.html)
  * [Networks](networks.html)
  * [Persistent disks](persistent-disks.html)
+ * [Trusted certificates](trusted-certs.html)
  * IaaS specifics
     * [AWS](aws-cpi.html)
     * [OpenStack](openstack-cpi.html)
