--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -43,7 +43,7 @@ title: Index
     * [On Local machine using BOSH Lite](bosh-lite.html)
  * BOSH micro deploy step-by-step
 
-### Advanced configuration
+### <a id="director-config"></a> Advanced configuration
 
  * [User management on the Director](director-users.html)
  * [Configuring the Director to use External Database](connect-postgres-hadb.html)
