--- a/resurrector.html.md.erb
+++ b/resurrector.html.md.erb
@@ -57,6 +57,8 @@ To enable the Resurrector:
     Enter new password: ************
     </pre>
 
+    Alternatively if you have [preconfigured users for the Director](director-users.html#preconfigured) you can just add that HM user to that list before redeploying the Director.
+
 ### <a id="customize"></a> Customizing for Your Deployment
 
 For most deployments, you can use the default configuration values. In very small or very large deployments, the default values may need customization, as discussed in the following examples.
