beginning of how to configure bosh + uaa

--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -9,7 +9,7 @@ This document lists the all CLI commands you use to perform system administratio
 
 Use these commands against the Director to manage deployments and associated assets.
 
-### <a id="user"></a>Director Location
+### <a id="director"></a>Director Location
 
 <pre class="terminal">bosh target [DIRECTOR_URL] [ALIAS]</pre>
 Connects to the Director URL/IP that you specify for ongoing communication. You can provide `ALIAS` to set an alias for the Director. Displays the currently targeted Director if you do not provide a URL.
