--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -14,6 +14,10 @@ resource_pools:
   cloud_properties: {instance_type: r3.8xlarge}
 ```
 
+For an overview of the sequence of CPI calls, the following resources are helpful:
+- [bosh components](bosh-components.html) and its example component interaction during new vm creation
+- typical vm instanciation by bosh-init described in the [bosh-init architecture doc](https://github.com/cloudfoundry/bosh-init/blob/master/docs/architecture.md#deploy-command-flow) where calls to the cpi are mentionned as `cloud.` 
+
 ---
 ## <a id="stemcells"></a> Stemcell management
 
@@ -180,6 +184,8 @@ For the Agent to successfully start on the created VM, several bootstrapping set
 	"env": {},
 }
 ```
+
+Refer to [VM configuration locations](vm-config.html) for an overview of the bosh agent config files
 
 ---
 ### <a id="delete-vm"></a> `delete_vm`
